--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #f7f7f7;
+    background-color: #ff0040;
     margin: 0;
     padding: 0;
 }
